[package]
name = "novax-abi-build"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/gfusee/novax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.29"
proc-macro2 = "1.0.63"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
rust-format = "0.3.4"
convert_case = "0.6.0"
regex = "1.9.0"
