[package]
name = "novax-abi-build"
version = "0.0.12"
edition = "2021"
description = "A build-dependency crate for 'nova' which hosts macros and utilities for generating client code based on smart contract ABIs. It facilitates the automated creation of interfaces, types, and implementations for interacting with blockchain contracts."
license = "GPL-3.0-only"
repository = "https://github.com/gfusee/novax"

[features]
no-fmt-output = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.29"
proc-macro2 = "1.0.63"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
rust-format = "0.3.4"
convert_case = "0.6.0"
regex = "1.9.0"
