[package]
name = "novax-caching"
version = "0.1.13"
edition = "2021"
license = "GPL-3.0-only"
description = "An auxiliary crate within the NovaX framework that provides caching functionalities to optimize and enhance the performance of blockchain interactions."
repository = "https://github.com/gfusee/novax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.180"
tokio = "1.29.1"
async-trait = "0.1.72"
redis = { version = "0.27.4", features = ["aio", "tokio-comp"] }
novax = { path = "../core", version = "0.1.13" }
bitcode = { version = "=0.6.3", features = ["serde"] }

[dev-dependencies]
thread_local = "1.1.7"
