[package]
name = "novax"
version = "0.1.7-beta.0"
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
description = "NovaX is your go-to toolkit for building robust software seamlessly interacting with the MultiversX blockchain."
repository = "https://github.com/gfusee/novax"
categories = ["cryptography::cryptocurrencies", "api-bindings"]
keywords = ["multiversx", "blockchain", "sdk", "api"]

[features]
ci = ["novax-abi-build/no-fmt-output"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
novax-data = { path = "../data", version = "0.1.7-beta.0" }
novax-executor = { path = "../executor", version = "0.1.7-beta.0" }
num-bigint = { version = "0.4.3", features = ["serde"] }
async-trait = "0.1.72"
serde = "1.0.177"
serde_json = "1.0.104"
tokio = "1.29.1"
multiversx-sc = "0.50.3"
multiversx-sc-snippets = "0.50.3"
multiversx-sdk = "0.4.1"
multiversx-sc-scenario = "0.50.3"
multiversx-sc-codec = "0.19.0"
multiversx-sc-codec-derive = "=0.19.0"
reqwest = "0.11.18"
hex = "0.4.3"

[build-dependencies]
novax-abi-build = { path = "../abi-build", version = "0.1.7-beta.0" }
