[package]
name = "novax"
version = "0.2.11"
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
description = "NovaX is your go-to toolkit for building robust software seamlessly interacting with the MultiversX blockchain."
repository = "https://github.com/gfusee/novax"
categories = ["cryptography::cryptocurrencies", "api-bindings"]
keywords = ["multiversx", "blockchain", "sdk", "api"]

[features]
ci = ["novax-abi-build/no-fmt-output"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
novax-data = { path = "../data", version = "0.2.11" }
novax-executor = { path = "../executor", version = "0.2.11" }
num-bigint = { version = "0.4.3", features = ["serde"] }
async-trait = "0.1.72"
serde = "1.0.177"
serde_json = "1.0.104"
tokio = "1.29.1"
multiversx-sc = "=0.57.1"
multiversx-sc-snippets = { version = "=0.57.1", default-features = false, features = ["static-tls"] }
multiversx-sdk = "=0.9.1"
multiversx-sc-scenario = "=0.57.1"
multiversx-sc-codec = "=0.22.0"
reqwest = { version = "=0.12.9", default-features = false, features = ["rustls-tls"] }

[build-dependencies]
novax-abi-build = { path = "../abi-build", version = "0.2.11" }
