[package]
name = "novax-data"
version = "0.1.12"
edition = "2021"
license = "GPL-3.0-only"
description = "A foundational crate for the NovaX framework, providing essential data types and conversions necessary for working with smart contracts and blockchain interactions."
repository = "https://github.com/gfusee/novax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
multiversx-sc = "0.52.3"
multiversx-sc-scenario = "0.52.3"
multiversx-sc-codec = "0.20.1"
multiversx-sdk = "0.4.1"
serde = "1.0.183"
base64 = "0.21.3"
