[package]
name = "novax-executor"
version = "0.1.6"
edition = "2021"
license = "GPL-3.0-only"
description = "Part of the NovaX framework, this crate facilitates the execution of transactions and queries against smart contracts on the blockchain."
repository = "https://github.com/gfusee/novax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.29.1"
reqwest = "0.12.4"
async-trait = "0.1.73"
num-bigint = "0.4.3"
serde = "1.0.183"
serde_json = "1.0.108"
hex = "0.4.3"
base64 = "0.21.3"
sha3 = "0.10.8"
novax-data = { path = "../data", version = "0.1.6" }
novax-request = { path = "../request", version = "0.1.6" }
multiversx-sc = { path = "../../mx-sdk-rs/framework/base" }
multiversx-sc-scenario = { path = "../../mx-sdk-rs/framework/scenario" }
multiversx-sdk = { path = "../../mx-sdk-rs/sdk/core" }
multiversx-sc-snippets = { path = "../../mx-sdk-rs/framework/snippets" }

[dev-dependencies]
serde_json = "1.0.105"
