[package]
name = "novax-executor"
version = "0.1.7-beta.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Part of the NovaX framework, this crate facilitates the execution of transactions and queries against smart contracts on the blockchain."
repository = "https://github.com/gfusee/novax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.29.1"
reqwest = "0.12.4"
async-trait = "0.1.73"
num-bigint = "0.4.3"
serde = "1.0.183"
serde_json = "1.0.108"
hex = "0.4.3"
base64 = "0.21.3"
sha3 = "0.10.8"
pem = "3.0.4"
novax-data = { path = "../data", version = "0.1.7-beta.0" }
novax-request = { path = "../request", version = "0.1.7-beta.0" }
multiversx-sc = "0.50.3"
multiversx-sc-scenario = "0.50.3"
multiversx-sdk = "0.4.1"
multiversx-sc-snippets = "0.50.3"

[dev-dependencies]
serde_json = "1.0.105"
