[package]
name = "novax-executor"
version = "0.2.12"
edition = "2021"
license = "GPL-3.0-only"
description = "Part of the NovaX framework, this crate facilitates the execution of transactions and queries against smart contracts on the blockchain."
repository = "https://github.com/gfusee/novax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.29.1"
reqwest = { version = "=0.12.9", default-features = false, features = ["rustls-tls"] }
async-trait = "0.1.73"
num-bigint = "0.4.3"
serde = "1.0.183"
serde_json = "1.0.108"
hex = "0.4.3"
base64 = "0.21.3"
sha3 = "0.10.8"
pem = "3.0.4"
novax-data = { path = "../data", version = "0.2.12" }
novax-request = { path = "../request", version = "0.2.12" }
multiversx-sc = "=0.57.1"
multiversx-sc-scenario = "=0.57.1"
multiversx-sdk = { version = "=0.9.1" }
multiversx-sc-snippets = { version = "=0.57.1", default-features = false, features = ["static-tls"] }
elasticsearch = { version = "7.17.7-alpha.1", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
serde_json = "1.0.105"
