[package]
name = "novax-multisig"
version = "0.2.12"
edition = "2021"
license = "GPL-3.0-only"
description = "Utils to interact with multisig contracts using NovaX."
repository = "https://github.com/gfusee/novax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.32.0"
novax = { path = "../core", version = "0.2.12" }
novax-data = { path = "../data", version = "0.2.12" }
novax-executor = { path = "../executor", version = "0.2.12" }
multiversx-sc = "=0.57.1"
multiversx-sdk = "=0.9.1"
multiversx-sc-scenario = "=0.57.1"
multiversx-sc-codec = "=0.22.0"
multiversx-sc-snippets = { version = "=0.57.1", default-features = false, features = ["static-tls"] }
base64 = "0.21.3"
async-trait = "0.1.73"
num-bigint = "0.4.4"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.108"
