[package]
name = "tester-contract"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false
license = "GPL-3.0-only"

[lib]
path = "src/lib.rs"

[dependencies]
multiversx-sc = { path = "../../../mx-sdk-rs/framework/base" }

[dev-dependencies]
multiversx-sc-scenario = { path = "../../../mx-sdk-rs/framework/scenario" }

[package.metadata.release]
release = false
