[package]
name = "tester"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = "1.30.0"
hyper = "=1.0.0-rc.4"
reqwest = "=0.11.20"
serde = "1.0.193"
num-bigint = "0.4.3"
async-trait = "0.1.73"
hex = "0.4.3"
tester-contract = { path = "../contract" }
novax = { path = "../../core" }
novax-mocking = { path = "../../mocking" }
novax-request = { path = "../../request" }
base64 = "0.21.5"

[package.metadata.release]
release = false
